--- a/FP.ipynb
+++ b/FP.ipynb
@@ -61,8 +61,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c9e03add-f575-4a33-b1e6-6d87ffc5e6aa",
+   "metadata": {},
+   "source": [
+    "## Dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 44,
    "id": "75c5c7c2-1bc1-4af9-8302-42c190e268bb",
    "metadata": {
     "scrolled": true
@@ -710,18 +718,27 @@
        "34       673485   8425931  "
       ]
      },
+     "execution_count": 44,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#dataset\n",
-    "display(df)"
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34f03ca4-05d7-4e3f-8d21-dd7aef562cce",
+   "metadata": {},
+   "source": [
+    "### Info Dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 49,
    "id": "4fb42d88-8fef-45d6-8909-905f2a324fa4",
    "metadata": {},
    "outputs": [
@@ -729,8 +746,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Info Dataset\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 35 entries, 0 to 34\n",
       "Data columns (total 11 columns):\n",
@@ -754,8 +769,6 @@
     }
    ],
    "source": [
-    "#info data\n",
-    "print(\"\\nInfo Dataset\")\n",
     "print(df.info())"
    ]
   },
@@ -769,7 +782,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 45,
+   "id": "d8f7a608-25e5-4dc0-8516-25cca9144436",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cols_pendidikan = ['Tidak/belum pernah sekolah', 'Tidak/belum tamat SD', 'SD', \n",
+    "                   'SLTP', 'SLTA Umum/SMU', 'SLTA Kejuruan/SMK', \n",
+    "                   'Akademi/Diploma', 'Universitas']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12863bd0-b159-4d99-a641-0719d96b00a0",
+   "metadata": {},
+   "source": [
+    "### Tren Pengagguran per Tahun"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "id": "3c8f15d7-352a-4f61-9296-6fb4476e5e4f",
    "metadata": {},
    "outputs": [
@@ -793,20 +826,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "d8f7a608-25e5-4dc0-8516-25cca9144436",
+   "cell_type": "markdown",
+   "id": "f452de96-df2e-43ca-9c7e-4ddad0ca1cb2",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "cols_pendidikan = ['Tidak/belum pernah sekolah', 'Tidak/belum tamat SD', 'SD', \n",
-    "                   'SLTP', 'SLTA Umum/SMU', 'SLTA Kejuruan/SMK', \n",
-    "                   'Akademi/Diploma', 'Universitas']"
+    "### Rata-Rata Pengangguran Sesuai Tingkat Pendidkan"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "id": "0d94f9d5-5e5e-4de5-b122-c84c0dbaa4ab",
    "metadata": {},
    "outputs": [
